# chess-puzzler

./: README.md  pyproject.toml
src/chess_puzzler/: __init__.py  batch.py  cli.py  config.py  engine.py  finder.py  metrics.py  model.py  tagger.py  util.py
src/chess_puzzler/tags/: __init__.py  endgame.py  mate.py  material.py  misc.py  tactics.py  zugzwang.py
tests/: game_with_evals.pgn  test_tagger.py  test_zugzwang.py
