[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "chess-puzzler"
version = "0.1.0"
requires-python = ">=3.10"
description = "Find and tag chess puzzles from chess games"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "chess",
    "tqdm",
    "click",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120

[project.scripts]
puzzler = "chess_puzzler.cli:main"