[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "chess-puzzler"
version = "0.1.0"
requires-python = ">=3.10"
maintainers = [
  {name = "Christopher Akiki", email = "christopher.akiki@gmail.com"}
]
description = "Find and tag chess puzzles from chess games"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "chess",
    "tqdm",
]

[project.optional-dependencies]
cli = ["click"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120

[project.scripts]
puzzler = "chess_puzzler.cli:main"